# Upscaling_ESRGAN

./: .gitignore  DEPLOYMENT.md  ONNX_TENSORRT_EXPLAINED.md  README.md  USAGE.md  benchmark_phase3.py  benchmarking.py  compare_benchmarks.py  compare_models.py  convert_trt_engine.py  download_bsrgan.py  download_swinir.py  export_onnx.py  inspect_checkpoint.py  optimize_hardware_config.py  phasevideoupscalefile.md  production_image_upscale.py  production_image_upscale.py.bak  production_upscale.py  production_upscale.py.bak  pyproject.toml  requirements.txt  upscale_pipeline_trt.py  upscale_video.py  upscale_video_pipeline.py  verify_gpu.ipynb
src/upscaler/: cli.py  config.yaml
src/upscaler/core/: image.py  video.py
